refactor: update create bookmark more safe
